# AI-Agentic-BDCC

LAB 1 - ingénierie des prompts/langchainPrompt/: main.py  pyproject.toml
LAB 2 - agent avec longchain/: chef_agent.py
LAB 3 - Agent RAG/: readme.md
LAB 4 - MCP/: agentMCP.py  agentMCPTime.py  agentMCPTravel.py  readme.md
LAB 5 - LangGraph Studio/: README.md
LAB 7 - Agent HITL/: hitl.py  pyproject.toml  readme.md
LAB 8 - workflows langgraph/: README.md  conditional_workflow.py  hello_graph.py  main.py  message_state.py  pyproject.toml  reducers_demo.py  workflow_loop.py
LAB 8 - workflows langgraph/workflows/: two_step_workflow.py
LAB 9 - Agent avec LangGraph/: README.md  agent_node.py  hitl_workflow.py  tp_agent.py
Lab 5 - LangGraph Studio/: agent_simple.py  multi_agents.py  pyproject.toml
Lab 6 - Contexte et Etat/: README.md  agent_context.py  agent_state.py
Projet fin de module IA/Mon_Projet_RAG/: base_helpdesk.txt  etape1_base.py  etape2_outils.py  etape3_graphe.py  lancement_test.py  readme.md  requirements.txt
Projet fin de module IA/Mon_Projet_RAG/chroma_db/: chroma.sqlite3
TP 2 - agent avec longchain/: readme.md
TP-Chef_personnel/: agent.py  main.py  readme.md  requirements.txt
TP-Chef_personnel/core/: agent.py
TP-Chef_personnel/data/: memory_store.json
